--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,30 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+<html>
+<nav class=" nav-esquerda">
+<a href="https://github.com/gabrielca5">
+<img src="images\25231.png" alt="">
+</a>
+<a href="https://www.linkedin.com/in/gabrielaguiar/">
+<img src="images\linkedin logo.jpg" alt="">
+</a>
+<a href="mailto:gabrielchavesaguiar@gmail.com">
+<img src="images\54215.png" alt="">
 
+
+</a>
+
+
+</nav>
 <nav class="nav-container">
     <header class="header">
+        <img src="images\foto_pessoal.png" alt="">
         <ul class="nav-container">
         <p class="nav-container-nome">Gabriel Chaves Aguiar</p>
-<a href="#home" ">Home</a>
+<a href="#home" >Home</a>
 <a href="#projetos">Projetos</a>
 <a href="#sobre mim"> Sobre mim</a>
-<a href="">Contato</a>
+
  
 </ul>
 </nav>
@@ -26,7 +42,7 @@
 </body>
 
 
-<br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br>
 
 <section id="projetos" class="projetos">
     <h1 class="title-projetos">Meus trabalhos</h1>
@@ -40,16 +56,15 @@
             <a href="https://insper-classroom.github.io/projeto-pygame-site-marrom/"> Saiba mais</a>
         </div>
         <div class="projeto">
-            <h2>Projeto 2</h2>
-            <p>Descrição do projeto 2.</p>
+            <h2>Web-Scraper</h2>
+            <p>Esse é um projeto que scaneia alguma página de notícias da internet e salva as manchetes como um arquivo CSV</p>
+            <a href="https://github.com/gabrielca5/Web-Scraper-">Saiba mais</a>
         </div>
         <div class="projeto">
             <h2>Projeto 3</h2>
             <p>Descrição do projeto 3.</p>
         </div>
-        <div class="projeto">Projeto 4</div>
-        <div class="projeto">Projeto 5</div>
-        <div class="projeto">Projeto 6</div>
+        
 
 </section>
 
@@ -57,22 +72,31 @@
 
 
 <section id="sobre mim" class="tela-dois">
-    <h1 class="title-sessao">Sobre mim</h1>
+    <img class="imagem-sobre-mim" src= 'images\foto_pessoal.png' alt="Imagem de Gabriel Chaves Aguiar">
     
+    <h1 class="title-sessao">Sobre mim</h1>
     <div class="sobre-mim">
-       <p class="topicos"> Objetivos Profissionais</p>
-       <br> 
-       <ul><li>Contribuir para projetos inovadores que impactem 
-        positivamente a sociedade.</li>
-        <li>Continuar aprendendo e me desenvolvendo como profissional de tecnologia.
-        </li>
-    </ul>
-<p class="topicos"> Experiências Profissionais</p>
-       <ul>
-        <li>Desenvolvimento de Software</li>
-        <li>Trabalho em Equipe</li>
-    </ul>
+        <p class="topicos"> Objetivos Profissionais</p>
+        <br> 
+        <ul><li>Contribuir para projetos inovadores que impactem 
+            positivamente a sociedade.</li>
+            <li>Continuar aprendendo e me desenvolvendo como profissional de tecnologia.
+            </li>
+        </ul>
+        <p class="topicos"> Experiências Profissionais</p>
+        <ul>
+            <li>Desenvolvimento de Software</li>
+            <li>Trabalho em Equipe</li>
+        </ul>
     </div>
+<div class="texto-sobre">
+<h2 >Estudante de <span class="destaque">Ciência da Computação no Insper (São Paulo)</span> | Apaixonado por tecnologia e inovação</h2>
+<h2>Natural de Fortaleza-CE, sou um entusiasta da tecnologia em busca constante de desafios e aprendizado. 
+    Atualmente, participo de projetos práticos que fortalecem minhas habilidades técnicas e de trabalho em equipe.
+     Acredito na combinação entre conhecimento técnico e habilidades interpessoais para impulsionar impacto positivo.
+      Aberto a novas conexões e oportunidades que me permitam crescer e contribuir de forma significativa.</h2>
+
+</div>
 </section>
 </body>
 </html>
